# smart-man

./: README.md  pyproject.toml  requirements.txt
misc/: textual_test.py
smart_man/: fetcher.py  helpers.py  mantui.py
src/: fetcher.py  helpers.py  mantui.py  textual_test.py  tui.py
