[project]
name = "smart-man"
version = "0.1.0"
description = ""
authors = [
    { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "textual >=6.6.0,<7.0.0",
    "openai >=2.8.1,<3.0.0",
]

[project.scripts]
smart-man = "smart_man.mantui:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
